--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,9 @@ html {
   background-color: #082032;
   display: flex;
   flex-direction: row;
+  width: max-content;
+  height: max-content;
+  height: 2000px;
   /* padding: 36px 76px; */
 }
 .App-logo {
@@ -78,7 +81,7 @@ html {
   font-weight: bold;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
   .App {
     flex-direction: column;
     padding: 40px 24px;
