--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -6,53 +6,88 @@
   padding-top: 10%;
   min-height: 100vh;
 }
+
 .about-subtitle {
   margin-top: -30px;
   color: white;
   font-size: 55px;
-  font-family: Poppins;
-font-style: normal;
-font-weight: bold;
-border-radius: 10px;
-line-height: 69px;
+  font-family: "NTR", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  border-radius: 10px;
+  line-height: 69px;
 }
 
 .about-desc {
-  color:white;
+  color: white;
   font-size: 20px;
   max-width: 60%;
   padding-bottom: 50px;
   padding-top: 30px;
-  font-family: helvetica;
-font-style: normal;
-font-weight: normal;
-line-height: 43px;
+  font-family: "NTR", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 43px;
 
 }
-.check-list {
-  margin: 0;
-  padding-left: 1.2rem;
+
+
+.about-image {
+  padding-left: 40px;
 }
 
-.check-list li {
-  position: relative;
-  list-style-type: none;
-  padding-left: 2.5rem;
-  margin-bottom: 0.5rem;
-  color: white;
+.about-image img {
+  max-width: 300px;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 6px 13px 23px -5px rgba(0, 0, 0, 0.46);
+  border: 2px solid var(--green-bright);
 }
 
-.check-list li:before {
-    content: '';
-    display: block;
-    position: absolute;
-    left: 0;
-    top: -2px;
-    width: 5px;
-    height: 11px;
-    border-width: 0 2px 2px 0;
-    border-style: solid;
-    border-color: #FF4C29;
-    transform-origin: bottom left;
-    transform: rotate(45deg);
+@media only screen and (max-width: 400px) {
+  #about {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 3%;
+    padding-top: 5%;
+    min-height: 100vh;
+  }
+
+  .about-subtitle {
+    margin-top: -30px;
+    color: white;
+    font-size: 200%;
+    font-family: "NTR", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    border-radius: 10px;
+    line-height: 69px;
+  }
+
+  .about-desc {
+    color: white;
+    font-size: 20px;
+    width: 16%;
+    padding-bottom: 50px;
+    padding-top: 30px;
+    font-family: "NTR", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 43px;
+
+  }
+
+
+  .about-image {
+    padding-left: 40px;
+  }
+
+  .about-image img {
+    max-width: 300px;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 6px 13px 23px -5px rgba(0, 0, 0, 0.46);
+    border: 2px solid var(--green-bright);
+  }
 }
