--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ html {
   transition: opacity 0.6s ease-out, transform 1s ease-out;
   will-change: opacity, visibility;
 }
+
 .fade-in-section.is-visible {
   opacity: 1;
   transform: none;
@@ -26,9 +27,10 @@ html {
   height: 4000px;
   /* padding: 36px 76px; */
 }
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.app-header {
+  width: 100%;
+  height: auto;
 }
 
 #content {
@@ -37,12 +39,14 @@ html {
   overflow-x: hidden;
   overflow-y: hidden;
 }
+
 .rs-steps-horizontal .rs-steps-item-content {
   text-align: left;
 }
 
 ::selection {
-  background: var(--lightest-navy); /* WebKit/Blink Browsers */
+  background: var(--lightest-navy);
+  /* WebKit/Blink Browsers */
 }
 
 @media (prefers-reduced-motion: no-preference) {
