--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -24,7 +24,7 @@
 
 .button a {
   font-family: sans-serif;
-  font-size: 1em;
+  font-size: 20px;
   background: #ff4c29;
   color: white;
   border: #03131f 0.5px solid;
@@ -48,6 +48,28 @@
   display: grid;
   grid-template-columns: repeat(3, minmax(300px, 1fr));
   grid-gap: 10px;
+}
+
+.card-title {
+  font-family: "NTR", sans-serif;
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+  padding-bottom: 40px;
+}
+
+.card-desc {
+  font-family: "NTR", sans-serif;
+  color: white;
+  font-size: 18px;
+  padding-bottom: 20px;
+}
+
+.card-tech {
+  font-family: "NTR", sans-serif;
+  color: white;
+  font-size: 16px;
+  padding-bottom: -100px;
 }
 
 @media (max-width: 1080px) {
