--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,10 @@ html {
   background-color: #082032;
   display: flex;
   flex-direction: row;
-  width: max-content;
+  width: auto;
   height: max-content;
+  background-size: cover;
+  background-attachment: fixed;
   /* padding: 36px 76px; */
 }
 
