--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -159,7 +159,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding-left: 3%;
-    padding-top: 7%;
+    padding-top: 40%;
     min-height: 100vh;
   }
 
@@ -194,6 +194,21 @@
     display: grid;
     grid-template-columns: repeat(3, minmax(300px, 1fr));
     grid-gap: 10px;
+  }
+
+  .projects-card {
+    position: relative;
+    cursor: default;
+    display: flex;
+    flex-direction: column;
+    /* align-items: flex-start; */
+    position: relative;
+    height: 50%;
+    padding: 1rem 1.5rem;
+    background-color: #03131f;
+    border-radius: 16px;
+    margin-top: 50px;
+    margin-left: -9%;
   }
 
   @media (max-width: 1080px) {
