--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -159,9 +159,20 @@
     flex-direction: column;
     align-items: flex-start;
     padding-left: 3%;
-    padding-top: 40%;
+    padding-top: 60%;
     min-height: 100vh;
   }
+
+  .work-subtitle {
+    margin-top: 20%;
+    color: white;
+    font-size: 55px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
+    border-radius: 10px;
+  }
+
 
   .button {
     margin-top: 40px;
