--- a/src/styles/experience.css
+++ b/src/styles/experience.css
@@ -3,9 +3,8 @@
   flex-direction: column;
   align-items: flex-start;
   padding-left: 15%;
-  padding-top: 10%;
   min-height: 100vh;
-  margin-bottom: -100px;
+  margin-top: -350px;
 }
 
 .check-list {
@@ -41,7 +40,6 @@
   font-size: 28px;
   font-weight: bold;
   color: white;
-  margin-bottom: -100%;
 }
 
 .joblist-duration {
@@ -49,7 +47,6 @@
   font-size: 24px;
   font-weight: bold;
 }
-
 
 ul {
   list-style: none;
@@ -79,6 +76,24 @@ ul {
   position: absolute;
   left: 0;
 }
+.jobs li {
+  margin-top: 1%;
+}
+
+.job1 {
+  margin-top: 10px;
+  margin-bottom: -180px;
+}
+
+.job2 {
+  margin-top: 10px;
+  margin-bottom: -180px;
+}
+
+.job3 {
+  margin-top: 10px;
+  margin-bottom: -180px;
+}
 
 .jobs {
   content: "▹    ";
@@ -86,7 +101,7 @@ ul {
   position: absolute;
   padding-left: 2rem;
   margin-left: 5px;
-  margin-top: 10px;
+  margin-top: -200%;
 }
 
 .job-description li {
@@ -119,7 +134,6 @@ ul {
     padding-top: 48%;
     min-height: 100vh;
     margin-bottom: 100px;
-    margin-top: -300px;
   }
 
   .check-list {
@@ -327,6 +341,21 @@ ul {
     left: 0;
   }
 
+.job1 {
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
+
+.job2 {
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
+
+.job3 {
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
+
   .jobs {
     content: "▹    ";
     color: white;
@@ -346,7 +375,7 @@ ul {
 
   .job-description {
     padding-top: 24px;
-    width: 95%;
+    width: 85%;
     font-family: "NTR", sans-serif;
     font-size: 20px;
   }
