--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -5,8 +5,13 @@
   padding-left: 15%;
   padding-top: 10%;
   min-height: 100vh;
+  margin-top: -500px;
 }
 
+.project-container {
+  width: 1000px;
+  height: 1000px;
+}
 .work-subtitle {
   margin-top: 10px;
   color: white;
@@ -86,8 +91,12 @@
     padding-left: 3%;
     padding-top: 60%;
     min-height: 100vh;
+    margin-top: 9%;
   }
-
+  .project-container{
+    width: 60%;
+    height: inherit;
+  }
   .work-subtitle {
     margin-top: 5%;
     color: white;
